# wpcode

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
houdini/: wepresent_package.json
launchers/: mayaInit.py  notes.txt  run_maya.bat
maya/plugin/: CMakeLists.txt  CMakePresets.json  cmake_install.cmake
maya/plugin/output/Maya2023/plug-ins/: strata.mll
maya/plugin/src/: containers.h  enum.h  lib.h  macro.h  plugin.cpp  span.h
maya/plugin/src/cmd/: wpSkinClusterCmd.cpp  wpSkinClusterCmd.h
maya/plugin/src/impl/: core_impl.cpp
maya/plugin/src/interface/: module_interface.h
maya/plugin/src/node/: expSet.cpp  expSet.h  wpSkinCluster.cpp  wpSkinCluster.h
maya/plugin/src/proxy/: file_watcher.cpp  file_watcher.h  module_manager.cpp  module_manager.h  plugin_proxy.cpp
maya/plugin/src/strata/: AABB.cpp  AABB.h  dirtyGraph.cpp  dirtyGraph.h  evalGraph.cpp  evalGraph.h  lib.cpp  lib.h  libEigen.cpp  libEigen.h  name.h
maya/plugin/src/strata/exp/: accessAtom.h  assignAtom.cpp  assignAtom.h  atomVariant.h  callAtom.h  constantAtom.cpp  constantAtom.h  expAtom.cpp  expAtom.h  expElCompare.h  expGraph.cpp  expGraph.h  expParse.cpp  expParse.h  expValue.cpp  getItemAtom.h  groupAtom.cpp  groupAtom.h  nameAtom.h  plusAtom.h  resultAtom.cpp  resultAtom.h
maya/plugin/src/strata/stratacore/: edgeData.cpp  edgeData.h  element.cpp  element.h  faceData.cpp  faceData.h  group.h  intersection.h  libManifold.cpp  libManifold.h  manifold.cpp  manifold.h  pointData.cpp  pointData.h
maya/plugin/src/strata/stratacore/face/: shape.cpp  shape.h  topo.cpp
maya/plugin/strata/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  strata.sln  strata.vcxproj  strata.vcxproj.filters
maya/plugin/strata/Debug/: strata.exp  strata.ilk  strata.lib  strata.mll
maya/plugin/strata/enc_temp_folder/73877af7ac3c568de9efb2f52019b4/: elementOp.cpp
maya/plugin/strata/src/: AABB.cpp  AABB.h  MInclude.h  api.cpp  api.h  containers.cpp  containers.h  dirtyGraph.cpp  dirtyGraph.h  dirtyGraph.h~RF27c7a32b.TMP  dirtyGraph.h~RFd8d6085.TMP  eigtest.cpp  enum.h  expParse.cpp  expParse.h  factory.h  fnmatch.h  iterator.h  lib.cpp  lib.h  libEigen.cpp  libEigen.cpp~RF180379e8.TMP  libEigen.h  libEigen.h~RF1ab946c2.TMP  libEigen.h~RF1ac9bffc.TMP  libEigen.h~RF1ae300e3.TMP  libEigen.h~RF1ae54545.TMP  libEigen.h~RF9b25098.TMP  libnurbs.cpp  libnurbs.h  libplug.h  libramp.cpp  logger.cpp  logger.h  macro.h  manifold.h  matrixRoot.h  mixin.cpp  mixin.h  ndarray.h  (+19 more)
maya/plugin/strata/src/bezier/: CubicSpline.cpp  CubicSpline.h  CubicSplineHelpers.h  CubicSplineHelpers.inl  CubicSplineSimd.inl  CubicSpline_license.txt  bezier.h  bezier_curve.cpp  bezier_curve.h  bezier_license.txt  bezier_patch.cpp  bezier_patch.h  composite_bezier_curve.cpp  composite_bezier_curve.h  curve.cpp  curve.h  fit_composite_bezier_curve.cpp  fit_composite_bezier_curve.h  notes.txt  utilities.h
maya/plugin/strata/src/bezier/math/: misc.cpp  misc.h  tridiagonal.cpp  tridiagonal.h
maya/plugin/strata/src/exp/: assignAtom.cpp  assignAtom.h  callAtom.cpp  constantAtom.h  expAtom.cpp  expAtom.h  expElCompare.cpp  expElCompare.h  expGraph.cpp  expGraph.h  expLex.cpp  expLex.h  expParse.cpp  expParse.h  expValue.h  nameAtom.cpp  nameAtom.h  plusAtom.cpp  plusAtom.h  resultAtom.h
maya/plugin/strata/src/mayaConvert/: manifoldMTypes.h
maya/plugin/strata/src/mayaNode/: frameCurve.cpp  frameCurve.h  matrixCurve.cpp  matrixCurve.h  strataAddPointsOpNode.cpp  strataAddPointsOpNode.h  strataElementOpNode.cpp  strataElementOpNode.h  strataGraphNode.h  strataMayaLib.h  strataOpNodeBase.cpp  strataOpNodeBase.h  strataShapeGeometryOverride.cpp  strataShapeGeometryOverride.h  strataShapeGeometryOverride.h~RF12b95477.TMP  strataShapeNode.cpp  strataShapeNode.h
maya/plugin/strata/src/mayanode/: stratacurvenode.cpp  stratacurvenode.h  stratagraphnode.cpp  stratapointnode.cpp  stratapointnode.h  stratasurfacenode.cpp  stratasurfacenode.h
maya/plugin/strata/src/stratacore/: edgeData.cpp  edgeData.h  element.cpp  element.h  faceData.cpp  faceData.h  group.h  intersection.cpp  intersection.h  libFace.cpp  libFace.h  libManifold.cpp  libManifold.cpp~RFbf02318.TMP  libManifold.cpp~RFbf108b5.TMP  libManifold.h  manifold.cpp  manifold.cpp~RF199b82d0.TMP  manifold.h  manifold.h~RFb4850ef.TMP  manifold.h~RFc5c77d2.TMP  op.cpp  op.h  opgraph.cpp  opgraph.h  pointData.h  subsample.h  types.h  vertexData.cpp  vertexData.h
maya/plugin/strata/src/stratacore/face/: shape.cpp  shape.h  topo.cpp  topo.h
maya/plugin/strata/src/strataop/: elementOp.cpp  elementOp.h  expOp.h  mergeOp.cpp  mergeOp.h  strataElementOp.h  strataaddpointsop.h
maya/plugin/wpmplugin/: __init__.py  shell.py  testNode.py
maya/plugin/wpmplugin/activeset/: expression.py  node.py  settracker.py
maya/plugin/wpmplugin/solver/: __init__.py  lib.py  solverend.py  solverstart.py
pystubs/: hou.py
python/: README.md  dependency.txt  notes.txt
python/chimaera/: README.md  __init__.py  _node.py  attr.py  dex.py  graph.py  node.py
python/idem/: README.md  __init__.py  adaptor.py  config.json  dcc.py  launch.bat  launch.bat - Shortcut.lnk  main.py  model.py  node.py  scratch.py  scratchbridge.py  scratchsess.py
python/startup/: notes.txt
python/wp/: __init__.py  constant.py  data.py  env.py  option.py  pathlib.py  treefield.py  validation.py
python/wpasset/: __init__.py  bank.py  filetype.py  main.py  notes.txt  search.py
python/wpblend/: __init__.py  assetio.py  lib.py
python/wpdex/: README.md  __init__.py  base.py  context.py  dataclassdex.py  dictdex.py  main.py  modeled.py  modelled.py  override.py  pathdex.py  primdex.py  proxy.py  proxyold.py  react.py  reactive.py  seqdex.py  strexpdex.py  text.py  wx.py
python/wpexp/: README.md  (+13 more)
rust/file_hash/: Cargo.toml  README.md  pyproject.toml
rust/file_hash/python/file_hash/: __init__.py  _fallback.py
rust/file_hash/src/: lib.rs  main.rs  python.rs
(+990 files in other folders)
