[package]
name = "file_hash"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
rayon = "1.10"
hex = "0.4"
#pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dependencies.pyo3]
version = "0.28"
features = ["extension-module"]
optional = true

[features]
python = ["pyo3"]
pyo3 = ["dep:pyo3"]

[build]
rustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "file_hash"
path = "src/main.rs"

[lib]
name = "file_hash"
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = 3
lto = "fat"            # Link-time optimization — significant for crypto
codegen-units = 1
target-cpu = "native"  # REMOVED — see note below
